--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "node-cron": "^4.1.0",
+    "nodemailer": "^7.0.4",
     "nodemon": "^3.1.10",
     "uuid": "^11.0.5",
     "xlsx": "^0.18.5"
